# smarticles-fork

./: .gitignore  Cargo.toml  LICENSE  README.md  TIPE.md  derivees_partielles.md  network.drawio  rustfmt.toml  seeds.md
.github/workflows/: release.yml
img/: custom_seed.mov  particle_inspector_demo.mov
src/: ai.rs  app.rs  consts.rs  events.rs  main.rs  mat.rs  net.rs  simulation.rs  simulation_manager.rs  ui.rs
src/ai/: batch.rs  batch_training.rs  net.rs  training.rs
src/app/: simulation.rs  simulation_manager.rs  training.rs  training_manager.rs  ui.rs
