[package]
name = "smarticles"
version = "1.0.0"
edition = "2021"
authors = ["ChevyRay", "valflrt"]

[dependencies]
base64 = "0.13.0"
byteorder = "1.4.3"
eframe = "0.28.1"
humantime = "2.1.0"
postcard = { version = "1.0.8", features = ["alloc"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.9.0"
serde = "1.0.208"
